# firfather

./: README.md  first.sh  hadronyche.ash  motd
arrival/: Cargo.toml
arrival/src/: main.rs_checksum  main.rs_imports_template
cone/: Cargo.toml  cone.ash  cone.sh  cone_builder_zlib_pkgs.sh
cone/src/: main.rs  script.ash
hadronyche/: cross_build_reference.sh  hadronyche.ash
mygalomorphae/: Cargo.toml
tf/: provider.tf
winter/: Cargo.toml  README.md
winter/src/: main.rs
winter/src/needles/: mod.rs
winter/src/roots/: drink.rs  mod.rs
