[package]
name = "mygalomorphae"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-lab = "0.17"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
rustls = "0.23"
uuid = { version = "0.4", features = ["serde", "v4"] }
actix-session = { version = "0.10", features = ["cookie-session"] }
serde = { version = "1.0.145", features = ["derive"] }
