[package]
name = "winter"
version = "0.1.0"
edition = "2021"

[[ bin ]]
name = "winter"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
anyhow = "1.0"
openssl = { version = "*", features = ["vendored"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
uuid = { version = "0.4", features = ["serde", "v4"] }
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
k8s-crds-traefik = "0.7.1"
